# smartfit-study

./: Cargo.toml  Dockerfile  README.md  colors.txt  protoindex.html
src/: get_results.rs  lib.rs  location.rs  loctemplate.rs  main.rs  main_no_shuttle.rs
templates/: index.html  mindex.html  mstyle.css  result.html  style.css  template.html
